Fix stupid scroll bar shifting everything left

--- a/assets/css/style everest.css
+++ b/assets/css/style everest.css
@@ -5,6 +5,10 @@
     --windowBorder: #721608;
 }
 
+html {
+    scrollbar-gutter: stable;
+}
+
 .boxConstraint {
     width: 800px;
     width: 100%;
