--- a/assets/css/style ophelia.css
+++ b/assets/css/style ophelia.css
@@ -5,6 +5,10 @@
     --windowBorder: #b3578e;
 }
 
+html {
+    scrollbar-gutter: stable;
+}
+
 .boxConstraint {
     width: 800px;
     width: 100%;
